# affordance

./: .dashboard_2.py.swp  .gitignore  .pre-commit-config.yaml  Evaluation_for_NumPy_20250813_151740.json  Evaluation_for_NumPy_20250813_170711.json  Evaluation_for_NumPy_20250813_170756.json  Evaluation_for_NumPy_20250813_170823.json  Evaluation_for_NumPy_20250813_171005.json  Evaluation_for_NumPy_20250813_171406.json  NumPy_evaluation_20250812_230929.json  NumPy_evaluation_20250812_232934.json  README.md  classes.py  config_utils.py  dashboard.py  dashboard_2.py  data_models.py  demo_evaluation_20250803_022441.json  evaluation.py  json_utils.py  llm.py  main.py  orchestrator.py  pyproject.toml  rxconfig.py  tester.py  throwaway.py  utils.py
.streamlit/: config.toml
evals/: Evaluation_for_NumPy_gpt-3.5-turbo_20250815_160811.json  Evaluation_for_NumPy_gpt-4.1-mini_20250813_225242.json  Evaluation_for_NumPy_gpt-4.1-mini_20250813_231109.json  Evaluation_for_NumPy_gpt-4.1-nano_20250813_224937.json  Evaluation_for_NumPy_gpt-4.1-nano_20250816_013941.json  Evaluation_for_NumPy_gpt-4.1-nano_20250816_014434.json  Evaluation_for_NumPy_gpt-4.1_20250813_224325.json  Evaluation_for_NumPy_gpt-4_20250815_160915.json  Evaluation_for_NumPy_gpt-5_20250813_224218.json  Evaluation_for_NumPy_gpt-5_20250815_161053.json  Evaluation_for_numpy_gpt-4.1-mini_20250816_224653.json  Evaluation_for_numpy_gpt-4.1-nano_20250816_023711.json  Evaluation_for_numpy_gpt-4.1-nano_20250816_143735.json  Evaluation_for_numpy_gpt-4.1-nano_20250816_224635.json  Evaluation_for_numpy_gpt-4.1_20250816_224715.json  (+2 more)
(+29 files in other folders)
