[project]
name = "affordance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]
